@@ -385,3 +385,4 @@ v0.73.3:
     - Added a depends entry to the config.yml to prevent world.txt corruption if Towny loads before Multiverse.
     - Added a white suffix to town and nation chat to fix a compatability issue with herochat.
     - Added getTownName and isWilderness functions to the Towny API (inherit ca.xshade.bukkit.towny.Towny)
+    - If a mayor is deleted due to inactivity a new mayor is chosen from the assistants. If there are no assistants a random resident will be promoted.
